--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</div>
 	<div id='gameCanvas'></div>
 
-		<script src='three.min.js'></script>
+		<script src='three.js'></script>
 		<script src='keyevents.js'></script>
 		<script src='mainSG.js'></script>
 
