--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 		<script src='animate.js'></script>
 		<script src='levels.js'></script>
 
+		<script src='planeObject.js'></script>
+
 <!--
 		<script src='./Scripts/three.min.js'></script>
 		<script src='./Scripts/keyboard.js'></script>
