--- a/index.html
+++ b/index.html
@@ -14,27 +14,7 @@
 				width: 800px;
 				height: 450px;
 				margin: auto;
-				/*margin-left: auto;
-				margin-right: auto;
-				align: center;*/
-			}
-
-/*
-			#scoreboard 
-			{
-				text-align: center;
-				font-family: Segoe UI, Helvetica, Ubuntu, sans-serif;
-				color: white;
-			}
-			
-			#scores 
-			{
-				font-size:600%;
-				padding:0;
-				margin:0;
-				color: white;
-			}
-*/			
+			}	
 			#title 
 			{
 				text-align: center;
@@ -60,23 +40,6 @@
 		<script src='animate.js'></script>
 		<script src='levels.js'></script>
 
-		<script src='planeObject.js'></script>
-
-<!--
-		<script src='./Scripts/three.min.js'></script>
-		<script src='./Scripts/keyboard.js'></script>
-		<script src='./Scripts/game.js'></script>
-
-	
-		
-
-		<div id='scoreboard'>
-			<h1 id='scores'>0-0</h1>
-			<h1 id='title'>3D PONG</h1>
-			<h2 id='winnerBoard'>First to 7 wins!</h2>
-			<h3>A - move left
-			<br>D - move right</h3>
-		</div>
--->
+		<script src='Object.js'></script>
 	</body>
 </html>
